--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,2 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 @import 'components/header';
 @import 'components/browser';
+@import 'components/nftdata';
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #0c1014;
+  color: #fff;
+}
