--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
   width: 100%;
-  height: 90px;
-  background-color: azure;
+  height: 50px;
+  background-color: #14181d;
   &__title {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
