--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@
 @import 'components/header';
 @import 'components/browser';
 @import 'components/nftdata';
+@import 'components/spinner-container';
 
 body {
   font-family: 'Montserrat', sans-serif;
